

[B]Advanced Emulator Launcher | version 0.9.6 | XX January 2017[/B]

FEATURE  Use a Window property to let skins know wheter a launcher OR ROMs are being rendered.
         Set xbmcgui.Window(10001).setProperty('AEL_Content', 'launchers')
             xbmcgui.Window(10001).setProperty('AEL_Content', 'roms')
         It must be set on entering and unset on exiting the plugin.

WIP      Use setProperty() to inform the sking about ROM flags:
           1) Favourite status: OK, Unlinked ROM, Unlinked Launcher, Broken
           2) No-Intro status: Have, Missing, Added, Unknown
           3) Parent/Clone status: Parent or Clone (Boolean)
         
         For example:
           setProperty('AEL_Fav_stat',     'Fav_OK')
           setProperty('AEL_Fav_stat',     'Fav_UnlinkedROM')
           setProperty('AEL_Fav_stat',     'Fav_UnlinkedLauncher')
           setProperty('AEL_Fav_stat',     'Fav_Broken')
           setProperty('AEL_NoIntro_stat', 'NoIntro_Have')
           setProperty('AEL_NoIntro_stat', 'NoIntro_Miss')
           setProperty('AEL_NoIntro_stat', 'NoIntro_Added')
           setProperty('AEL_NoIntro_stat', 'NoIntro_Unknown')
           setProperty('AEL_NoIntro_stat', 'NoIntro_None')

WIP      Default to launcher icon if ROM icon is missing.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2500040#pid2500040

WIP      Update launching mechanism. User Python subprocess module on all platforms and not the
         deprecated os.system().

WIP      Log emulator/standalone launcher stdout/stderr into a file. Requires new launching
         mechanism based on subprocess module.

WIP      Add nplayers metadata field to ROMs.

WIP      Add ESRB/MPAA/PEGI rating?

WIP      Have a setting to restrict ROMs displayed based on rating.

WIP      Support for multidisc systems. Have a look to NOTES.md for more details about the AEL
         implementation.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2495480#pid2495480
