@@ -31,7 +31,7 @@ FEATURE  Use a Window property to let skins know wheter a launcher OR ROMs are b
              xbmcgui.Window(10001).setProperty('AEL_Content', 'roms')
          It must be set on entering and unset on exiting the plugin.
 
-WIP      Use setProperty() to inform the sking about ROM flags:
+FEATURE  Use setProperty() to inform the skin about ROM flags:
            1) Favourite status: OK, Unlinked ROM, Unlinked Launcher, Broken
            2) No-Intro status: Have, Missing, Added, Unknown
            3) Parent/Clone status: Parent or Clone (Boolean)
@@ -46,6 +46,9 @@ WIP      Use setProperty() to inform the sking about ROM flags:
            setProperty('AEL_NoIntro_stat', 'NoIntro_Added')
            setProperty('AEL_NoIntro_stat', 'NoIntro_Unknown')
            setProperty('AEL_NoIntro_stat', 'NoIntro_None')
+           setProperty('AEL_PClone_stat',  'PClone_Parent')
+           setProperty('AEL_PClone_stat',  'PClone_Clone')
+           setProperty('AEL_PClone_stat',  'PClone_Unknown')
 
 WIP      Default to launcher icon if ROM icon is missing.
          See http://forum.kodi.tv/showthread.php?tid=287826&pid=2500040#pid2500040
